# prawojazdy

./: .gitignore  LICENSE_CODE.txt  LICENSE_CONTENT.txt  README.md  README.pl.md  model1_front_top.mustache  model_back_script.js  model_front_media_wrapper.mustache  model_front_script.js  model_style.css  pyproject.toml
docs/: 1-about.html  2-how-to-start.html  3-cards-features.html  4-problems-with-commercial-sites.html  5-why-anki.html  6-why-education-should-be-free.html  CNAME  archives.html  authors.html  card-generation.html  categories.html  how-it-works.html  index.html  media-processing.html  project-overview.html  tags.html
docs/author/: slawomir-domagala.html
docs/category/: development.html  technical.html  using-and-why.html
docs/tag/: about.html  anki-cards.html  anki.html  architecture.html  cards.html  commercial-sites.html  criticism.html  education.html  features.html  ffmpeg.html  free-resources.html  generation.html  implementation.html  introduction.html  learning.html  media.html  motivation.html  optimization.html  overview.html  public-exams.html  python.html  spaced-repetition.html  technical.html
pytania_egzaminacyjne/: Pytania_egzaminacyjne_na_kierowcę_122025.xlsx  katalog_dla_kandydatów_na_kierowców_0220266.xlsx  katalog_pytania_egzminacyjne_kandydat__14112024.xlsx
scripts/: create_dirs.py  download_multiple_visuals.sh  download_visuals.sh  unpack_multiple_visuals.sh  unpack_visuals.sh
src/prawojazdy/: __about__.py  conversion.py  decks.py  main.py  media.py  notes.py  templates.py
src/prawojazdy-website/: pelicanconf.py
src/prawojazdy-website/content/: README.pl.md
src/prawojazdy-website/content/development/: card-generation.md  how-it-works.md  media-processing.md  project-overview.md
src/prawojazdy-website/content/using-and-why/: 1-about.html  2-how-to-start.html  3-cards-features.html  4-problems-with-commercial-sites.html  5-why-anki.html  6-why-education-should-be-free.html
src/prawojazdy-website/output/: 1-about.html  1-why-this-project.html  2-how-to-start.html  3-anki-cards-features.html  3-cards-features.html  3-why-anki.html  4-problems-with-commercial-sites.html  4-why-anki-is-better.html  5-why-free.html  6-why-free.html  archives.html  authors.html  card-generation.html  categories.html  education-should-be-free.html  index.html  media-processing.html  project-overview.html  readme.html  tags.html
src/prawojazdy-website/output/author/: slawomir-domagala.html
src/prawojazdy-website/output/category/: about.html  strony.html  technical.html  using-and-why.html
src/prawojazdy-website/output/tag/: about.html  accessibility.html  anki-cards.html  anki.html  architecture.html  cards.html  criticism.html  education.html  features.html  free-resources.html  generation.html  implementation.html  introduction.html  learning.html  overview.html  spaced-repetition.html
src/prawojazdy-website/pelican-plugins/asciidoc_reader/: __init__.py  asciidoc_reader.py
src/prawojazdy-website/themes/hyperspace/static/css/: main.css
src/prawojazdy-website/themes/hyperspace/templates/: base.html  category.html  index.html
src/prawojazdy/templates/: model1_back_top.mustache  model2_back_top.mustache  model2_front_top.mustache  model_back_media_wrapper.mustache  model_front_media_wrapper.mustache  model_front_script.js  model_style.css
tests/: __init__.py
