[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prawojazdy"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Sławomir Domagała", email = "slawomir.karol.domagala@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "genanki",
    "markdown",
    "numpy",
    "openpyxl",
    "pandas",
    "pelican",
    "requests"
]

[project.urls]
Documentation = "https://github.com/Sławomir Domagała/prawojazdy#readme"
Issues = "https://github.com/Sławomir Domagała/prawojazdy/issues"
Source = "https://github.com/Sławomir Domagała/prawojazdy"

[tool.hatch.version]
path = "src/prawojazdy/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/prawojazdy tests}"

[tool.coverage.run]
source_pkgs = ["prawojazdy", "tests"]
branch = true
parallel = true
omit = [
  "src/prawojazdy/__about__.py",
]

[tool.coverage.paths]
prawojazdy = ["src/prawojazdy", "*/prawojazdy/src/prawojazdy"]
tests = ["tests", "*/prawojazdy/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.default.env-vars]
PRAWOJAZDY_CONFIG = "2026_02"
PRAWOJAZDY_URL = """
https://www.gov.pl/pliki/mi/multimedia_do_pytan.zip
https://www.gov.pl/attachment/546279d3-2586-41e2-8912-3f5cab98d31d"""
PRAWOJAZDY_XLSX = "pytania_egzaminacyjne/katalog_dla_kandydatów_na_kierowców_0220266.xlsx"
PRAWOJAZDY_VISUALS = "visuals/multimedia do pytań"

[tool.hatch.envs.default.scripts]
ensure_downloads = ["mkdir -p downloads"]
download_visuals = [
    "ensure_downloads",
    "./scripts/download_multiple_visuals.sh \"$PRAWOJAZDY_CONFIG\" \"$PRAWOJAZDY_URL\""
]
ensure_visuals = ["mkdir -p visuals"]
unpack_visuals = [
    "ensure_visuals",
    "./scripts/unpack_multiple_visuals.sh \"$PRAWOJAZDY_CONFIG\" \"$PRAWOJAZDY_VISUALS\""
]
ensure_media = ["mkdir -p media"]
generate_deck = [
    "ensure_media",
    """python src/prawojazdy/main.py \
    "$PRAWOJAZDY_XLSX" \
    "$PRAWOJAZDY_VISUALS" \
    media \
    "$([ -f visuals/.$PRAWOJAZDY_CONFIG.unpacked_new_file ] && echo False || echo True)" \
    B""",
    "rm -f visuals/.$PRAWOJAZDY_CONFIG.unpacked_new_file"]
generate_example_deck = [
    "ensure_media",
    """python src/prawojazdy/main.py \
    "$PRAWOJAZDY_XLSX" \
    "$PRAWOJAZDY_VISUALS" \
    media \
    "$([ -f visuals/.$PRAWOJAZDY_CONFIG.unpacked_new_file ] && echo False || echo True)" \
    B \
    35 \
    example_prawo_jazdy.apkg""",
]
release = ["download_visuals", "unpack_visuals", "generate_deck"]
[tool.hatch.envs.deck]
template = "default"

[[tool.hatch.envs.deck.matrix]]
config = ["2024_11", "2025_12", "2026_02"]

[tool.hatch.envs.deck.overrides.matrix.config]
env-vars = [
  { key = "PRAWOJAZDY_CONFIG", if = ["2024_11"], value = "2024_11" },
  { key = "PRAWOJAZDY_CONFIG", if = ["2025_12"], value = "2025_12" },
  { key = "PRAWOJAZDY_CONFIG", if = ["2026_02"], value = "2026_02" },
  { key = "PRAWOJAZDY_URL", if = ["2024_11"], value = "https://www.gov.pl/pliki/mi/wizualizacje_do_pytan_18_01_2024.zip" },
  { key = "PRAWOJAZDY_URL", if = ["2025_12"], value = "https://www.gov.pl/pliki/mi/pytania_egzaminacyjne_na_prawo_jazdy_12_2025.zip" },
  { key = "PRAWOJAZDY_URL", if = ["2026_02"], value = "https://www.gov.pl/pliki/mi/multimedia_do_pytan.zip\nhttps://www.gov.pl/attachment/546279d3-2586-41e2-8912-3f5cab98d31d" },
  { key = "PRAWOJAZDY_XLSX", if = ["2024_11"], value = "pytania_egzaminacyjne/katalog_pytania_egzminacyjne_kandydat__14112024.xlsx" },
  { key = "PRAWOJAZDY_XLSX", if = ["2025_12"], value = "pytania_egzaminacyjne/Pytania_egzaminacyjne_na_kierowcę_122025.xlsx" },
  { key = "PRAWOJAZDY_XLSX", if = ["2026_02"], value = "pytania_egzaminacyjne/katalog_dla_kandydatów_na_kierowców_0220266.xlsx" },
  { key = "PRAWOJAZDY_VISUALS", if = ["2024_11"], value = "visuals/wizualizacje do pytań_18_01_2024_" },
  { key = "PRAWOJAZDY_VISUALS", if = ["2025_12"], value = "visuals/Pytania egzaminacyjne na prawo jazdy 2025" },
  { key = "PRAWOJAZDY_VISUALS", if = ["2026_02"], value = "visuals/multimedia do pytań" },
]